--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     implementation 'com.amap.api:map2d:latest.integration'
     //implementation 'com.amap.api:3dmap:latest.integration'
     implementation 'com.amap.api:location:latest.integration'
-    implementation 'com.amap.api:search:latest.integration'
+    implementation 'com.amap.api:search:6.9.2'
     implementation 'com.amap.api:navi-3dmap:latest.integration'
     implementation 'cn.bmob.android:bmob-sdk:3.7.3-rc1'
     implementation "io.reactivex.rxjava2:rxjava:2.2.2"
