--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".Main2Activity"
+            android:label="Moment">
+
+        </activity>
+        <activity android:name=".LoginActivity" />
         <activity android:name=".RegistActivity" />
 
         <provider
