--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,17 +16,18 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
-        android:name="android.support.multidex.MultiDexApplication"
+
+        android:name="com.example.struggele.campus_navigation.MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Main2Activity"
-            android:label="Moment">
-
-        </activity>
+        <activity android:name=".Main3Activity"></activity>
+        <activity
+            android:name=".Main2Activity"
+            android:label="Moment"></activity>
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegistActivity" />
 
