--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,18 +16,36 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
-
-        android:name="com.example.struggele.campus_navigation.MyApplication"
+        android:name=".MyApplication"
         android:allowBackup="true"
-        android:icon="@drawable/logo"
+        android:icon="@drawable/myapp1"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Main3Activity"></activity>
+        <activity android:name=".Main8Activity"></activity>
+        <activity android:name=".Main7Activity" />
+        <activity android:name=".Main6Activity" />
+        <activity android:name=".Main5Activity" />
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.example.cameraalbumtest.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
+        <activity android:name=".Main4Activity" />
+        <activity android:name=".GuideActivity" />
+        <activity
+            android:name=".Main3Activity"
+            android:label="历史上的今天" />
         <activity
             android:name=".Main2Activity"
-            android:label="Moment"></activity>
+            android:label="小小黑大" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegistActivity" />
 
