--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 
-android {
+android{
+
     compileSdkVersion 28
     useLibrary 'org.apache.http.legacy'
     defaultConfig {
@@ -49,4 +50,8 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'com.github.arcadefire:nice-spinner:1.3.1'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    //动态权限申请库
+    implementation 'pub.devrel:easypermissions:1.3.0'
 }
