--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,9 +49,13 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'com.github.arcadefire:nice-spinner:1.3.1'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     //动态权限申请库
     implementation 'pub.devrel:easypermissions:1.3.0'
+    implementation 'jp.wasabeef:glide-transformations:2.0.2'
+    //图片模糊效果
+
+
 }
