--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">//Android9.0连接bmob
+        android:usesCleartextTraffic="true">
+        <!--Android9.0连接bmob-->
         <activity android:name=".Main8Activity"></activity>
         <activity android:name=".Main7Activity" />
         <activity android:name=".Main6Activity" />
